# docs/swagger.yaml
@@ -743,6 +743,23 @@ paths:
         200:
           description: list of standing tables for this season
       security: []
+  /season/{season_id}/match:
+    get:
+      description: returns the matches of a given season
+      parameters:
+        - name: season_id
+          in: path
+          required: true
+          type: integer
+      tags:
+        - Season
+        - Match
+      produces:
+      - application/json
+      responses:
+        200:
+          description: list of matches for this season
+      security: []
   /category/{category_id}/match:
     get:
       summary: Returns the matches associated to to this category
